--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-cayman
 title: Statistical Tables
 show_downloads: true
+github:
+  zip_url: https://haziqj.github.io/stat-tables/stat-tables.pdf
 description: |
   An open source PDF format of statistical tables for use in examinations, tests, assignments, and so on.
