--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,7 @@
-# theme: jekyll-theme-cayman
-remote_theme: tuur29/pages-themes-cayman
+theme: jekyll-theme-cayman
 title: Statistical Tables
 show_downloads: true
-# github:
-#   zip_url: https://github.com/haziqj/stat-tables/releases/download/v0.2/stat-tables.pdf
-buttons:
-  zip_url: https://github.com/tuur29/pages-themes-cayman
-  zip_title: Download PDF
-  zip_hide: true
-  tar_hide: true
-  github_hide: false  
+github:
+  zip_url: https://github.com/haziqj/stat-tables/releases/download/v0.2/stat-tables.pdf
 description: |
   An open source PDF format of statistical tables for use in examinations, tests, assignments, and so on.
-  
